istio-explore/security/mtls.yaml

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: adservice-istio-client-mtls
spec:
  host: adservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: cartservice-istio-client-mtls
spec:
  host: cartservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: checkoutservice-istio-client-mtls
spec:
  host: checkoutservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: currencyservice-istio-client-mtls
spec:
  host: currencyservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL


---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: emailservice-istio-client-mtls
spec:
  host: emailservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: paymentservice-istio-client-mtls
spec:
  host: paymentservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: productcatalogservice-istio-client-mtls
spec:
  host: productcatalogservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

# TODO?!
# ---
# # shippingservice
# apiVersion: "authentication.istio.io/v1alpha1"
# kind: Policy
# metadata:
#   name: shippingservice-policy
# spec:
#   targets:
#   - name: shippingservice
#   peers:
#   - mtls:
#       mode: STRICT

# ---

# apiVersion: "networking.istio.io/v1alpha3"
# kind: DestinationRule
# metadata:
#   name: shippingservice-istio-client-mtls
# spec:
#   host: shippingservice.default.svc.cluster.local
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL

# ---
# # recommendationservice
# apiVersion: "authentication.istio.io/v1alpha1"
# kind: Policy
# metadata:
#   name: recommendationservice-policy
# spec:
#   targets:
#   - name: recommendationservice
#   peers:
#   - mtls:
#       mode: STRICT

# ---

# apiVersion: "networking.istio.io/v1alpha3"
# kind: DestinationRule
# metadata:
#   name: recommendationservice-istio-client-mtls
# spec:
#   host: recommendationservice.default.svc.cluster.local
#   trafficPolicy:
#     tls:
#       mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: frontend-istio-client-mtls
spec:
  host: frontend.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL


---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: frontend-external-istio-client-mtls
spec:
  host: frontend-external.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
